--- a/Ada.Caixa.Aula01.WebApi/Ada.Caixa.Aula01.WebApi.csproj
+++ b/Ada.Caixa.Aula01.WebApi/Ada.Caixa.Aula01.WebApi.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Xml" Version="2.3.9" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.4" />
   </ItemGroup>
